# 112112

./: AUDIT_SUMMARY.md  BRANCH_COVERAGE_AUDIT.md  EXHAUSTIVE_AUDIT_ENGINE.md  PROPERTY_TEST_IMPROVEMENTS.rs  RUNTIME_VERIFICATION_METRICS.rs  SECURITY_ACTION_ITEMS.md  SECURITY_AUDIT.md  SECURITY_AUDIT_EXECUTIVE_SUMMARY.md  SECURITY_AUDIT_IMPLEMENTATION_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_PROPOSAL.md  SECURITY_INVESTIGATION_COMMANDS.sh  SECURITY_TESTING_GUIDE.md  SERIALIZATION_BRANCH_ANALYSIS.md  ZEBRA_SECURITY_AUDIT.md  attack_simulator.py  audit_state.json  differential_fuzzer.py  differential_stats.json  exhaustive_audit_orchestrator.py  grammar_based_fuzzer.py  hybrid_concolic_fuzzer.py  run_exhaustive_audit.sh  setup_advanced_fuzzing.sh  setup_fuzzing.sh  taint_analysis.md  taint_guided_fuzzer.py  unsafe_block_auditor.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_difficulty.rs  fuzz_message_codec.rs
security-audit/: Cargo.toml  README.md
security-audit/.cargo/: config.toml
security-audit/crash-triage/: Cargo.toml
security-audit/crash-triage/src/: main.rs
security-audit/fuzzing/harnesses/: fuzz_p2p_sequence.rs  fuzz_p2p_version.rs  fuzz_rpc_json_request.rs  fuzz_tx_orchard.rs  fuzz_tx_v4.rs  setup-harnesses.sh
security-audit/harnesses/fuzz_address/: Cargo.toml
security-audit/harnesses/fuzz_address/src/: main.rs
security-audit/harnesses/fuzz_block_deser/: Cargo.toml
security-audit/harnesses/fuzz_block_deser/src/: main.rs
security-audit/harnesses/fuzz_codec_roundtrip/: Cargo.toml
security-audit/harnesses/fuzz_codec_roundtrip/src/: main.rs
security-audit/harnesses/fuzz_equihash_solution/: Cargo.toml
security-audit/harnesses/fuzz_equihash_solution/src/: main.rs
security-audit/harnesses/fuzz_halo2_verifier/: Cargo.toml
security-audit/harnesses/fuzz_halo2_verifier/src/: main.rs
security-audit/harnesses/fuzz_merkle_tree/: Cargo.toml
security-audit/harnesses/fuzz_merkle_tree/src/: main.rs
security-audit/harnesses/fuzz_note_commitment_tree/: Cargo.toml
security-audit/harnesses/fuzz_note_commitment_tree/src/: main.rs
security-audit/harnesses/fuzz_orchard_proof/: Cargo.toml
security-audit/harnesses/fuzz_orchard_proof/src/: main.rs
security-audit/harnesses/fuzz_p2p_addr/: Cargo.toml
security-audit/harnesses/fuzz_p2p_addr/src/: main.rs
security-audit/harnesses/fuzz_p2p_addrv2/: Cargo.toml
security-audit/harnesses/fuzz_p2p_addrv2/src/: main.rs
security-audit/harnesses/fuzz_p2p_block/: Cargo.toml
security-audit/harnesses/fuzz_p2p_block/src/: main.rs
security-audit/harnesses/fuzz_p2p_concurrent_stress/: Cargo.toml
security-audit/harnesses/fuzz_p2p_concurrent_stress/src/: main.rs
security-audit/harnesses/fuzz_p2p_feefilter/: Cargo.toml
security-audit/harnesses/fuzz_p2p_feefilter/src/: main.rs
security-audit/harnesses/fuzz_p2p_getblocks/: Cargo.toml
security-audit/harnesses/fuzz_p2p_getblocks/src/: main.rs
security-audit/harnesses/fuzz_p2p_getdata/: Cargo.toml
security-audit/harnesses/fuzz_p2p_getdata/src/: main.rs
security-audit/harnesses/fuzz_p2p_getheaders/: Cargo.toml
security-audit/harnesses/fuzz_p2p_getheaders/src/: main.rs
security-audit/harnesses/fuzz_p2p_headers/: Cargo.toml
security-audit/harnesses/fuzz_p2p_headers/src/: main.rs
security-audit/harnesses/fuzz_p2p_inv/: Cargo.toml
security-audit/harnesses/fuzz_p2p_inv/src/: main.rs
security-audit/harnesses/fuzz_p2p_mempool/: Cargo.toml
security-audit/harnesses/fuzz_p2p_mempool/src/: main.rs
security-audit/harnesses/fuzz_p2p_notfound/: Cargo.toml
security-audit/harnesses/fuzz_p2p_notfound/src/: main.rs
security-audit/harnesses/fuzz_p2p_ping/: Cargo.toml
security-audit/harnesses/fuzz_p2p_ping/src/: main.rs
security-audit/harnesses/fuzz_p2p_pong/: Cargo.toml
security-audit/harnesses/fuzz_p2p_pong/src/: main.rs
security-audit/harnesses/fuzz_p2p_reject/: Cargo.toml
security-audit/harnesses/fuzz_p2p_reject/src/: main.rs
security-audit/harnesses/fuzz_p2p_sendheaders/: Cargo.toml
security-audit/harnesses/fuzz_p2p_sendheaders/src/: main.rs
security-audit/harnesses/fuzz_p2p_sequence/: Cargo.toml
security-audit/harnesses/fuzz_p2p_sequence/src/: main.rs
security-audit/harnesses/fuzz_p2p_tx/: Cargo.toml
security-audit/harnesses/fuzz_p2p_tx/src/: main.rs
security-audit/harnesses/fuzz_p2p_verack/: Cargo.toml
security-audit/harnesses/fuzz_p2p_verack/src/: main.rs
security-audit/harnesses/fuzz_p2p_version/: Cargo.toml
security-audit/harnesses/fuzz_p2p_version/src/: main.rs
security-audit/harnesses/fuzz_redjubjub_sig/: Cargo.toml
security-audit/harnesses/fuzz_redjubjub_sig/src/: main.rs
security-audit/harnesses/fuzz_rpc_json_request/: Cargo.toml
security-audit/harnesses/fuzz_rpc_json_request/src/: main.rs
security-audit/harnesses/fuzz_rpc_sendrawtransaction/: Cargo.toml
security-audit/harnesses/fuzz_rpc_sendrawtransaction/src/: main.rs
security-audit/harnesses/fuzz_script_pubkey/: Cargo.toml
security-audit/harnesses/fuzz_script_pubkey/src/: main.rs
security-audit/harnesses/fuzz_script_sig/: Cargo.toml
security-audit/harnesses/fuzz_script_sig/src/: main.rs
security-audit/harnesses/fuzz_sighash_computation/: Cargo.toml
security-audit/harnesses/fuzz_tx_orchard/: Cargo.toml
security-audit/harnesses/fuzz_tx_sapling/: Cargo.toml
security-audit/harnesses/fuzz_tx_transparent/: Cargo.toml
security-audit/harnesses/fuzz_tx_v4/: Cargo.toml
security-audit/harnesses/fuzz_tx_v5/: Cargo.toml
security-audit/harnesses/fuzz_unsafe_blocks/: Cargo.toml
security-audit/harnesses/harness-common/: Cargo.toml
security-audit/infrastructure/build-scripts/: build-all-versions.sh
security-audit/reports/: AUDIT_REPORT_TEMPLATE.md
security-audit/scripts/: audit-unsafe-blocks.sh  build_sanitized.sh  orchestrate-fuzzing.sh  p2p_stress_client.py  run_concurrency_stress.sh  run_dependency_audit.sh  run_fuzzing_campaign.sh
security-audit/symbolic-exec/: Cargo.toml
security-audit/symbolic-exec/src/: main.rs  taint_tracker.rs  unsafe_enumerator.rs
security-audit/symbolic-execution/: run-klee.sh
(+69 files in other folders)
