[package]
name = "zebra-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }

[dependencies.zebra-network]
path = "../zebra-network"

[dependencies.zebra-chain]
path = "../zebra-chain"

[[bin]]
name = "fuzz_message_codec"
path = "fuzz_targets/fuzz_message_codec.rs"
test = false
doc = false

[[bin]]
name = "fuzz_difficulty"
path = "fuzz_targets/fuzz_difficulty.rs"
test = false
doc = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
