[package]
name    = "crash-triage"
version = "0.1.0"
edition = "2021"
description = "Automated crash triage, deduplication, and exploitability classification"

[[bin]]
name = "crash-triage"
path = "src/main.rs"

[dependencies]
zebra-chain   = { path = "../zebra-chain",   features = ["proptest-impl", "json-conversion"] }
zebra-network = { path = "../zebra-network",  features = ["proptest-impl"] }
byteorder     = "1.5"
bytes         = "1.10"
hex           = "0.4"
rand          = "0.8"
tokio         = { version = "1", features = ["full"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "2.0"
anyhow        = "1"
sha2          = "0.10"
clap          = { version = "4", features = ["derive"] }
walkdir       = "2"
