[package]
name    = "fuzz_equihash_solution"
version = "0.1.0"
edition = "2021"
description = "Fuzz Equihash solution verification"

[[bin]]
name = "fuzz_equihash_solution"
path = "src/main.rs"

[dependencies]
harness-common = { path = "../harness-common" }
zebra-chain    = { path = "../../zebra-chain",  features = ["proptest-impl", "json-conversion"] }
zebra-network  = { path = "../../zebra-network", features = ["proptest-impl"] }
zebra-script   = { path = "../../zebra-script" }
libfuzzer-sys  = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary      = { version = "1",   features = ["derive"] }
byteorder      = "1.5"
bytes          = "1.10"
hex            = "0.4"
rand           = "0.8"
tokio          = { version = "1", features = ["full"] }
tracing        = "0.1"
equihash       = "0.3"
orchard        = "0.13"
redjubjub      = "0.8"
sapling-crypto = "0.7"
