[package]
name    = "harness-common"
version = "0.1.0"
edition = "2021"

[dependencies]
zebra-chain   = { path = "../../zebra-chain",   features = ["proptest-impl", "json-conversion"] }
zebra-network = { path = "../../zebra-network",  features = ["proptest-impl"] }
byteorder     = "1.5"
bytes         = "1.10"
hex           = "0.4"
rand          = "0.8"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json    = "1"
thiserror     = "2.0"
sha2          = "0.10"
